syntax = "proto3";

option csharp_namespace = "LeaseManager";

import "Protos/DADTKVPaxos.proto";

/*** Transaction Manager services ***/
service TransactionManagerService {
    rpc TransactionSubmit (TransactionRequest) returns (TransactionReply);
    rpc LeasesAcquisition (LearnRequest) returns (Ack);
}

/*** Messages ***/
message TransactionRequest {
    string client = 1;
    repeated string toReadList = 2;
    repeated DadInt toWriteList = 3;
}

message TransactionReply {
    repeated DadInt readList = 1;
}

message LearnRequest {
    int32 slot = 1;
    repeated Lease value = 2;
}
